--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Movie List</title>
+    <title>Todos</title>
   </head>
   <body>
-    <h1 class="titleText">Movies</h1>
+    <h1 class="titleText">Todos</h1>
     <div id="root" style="page-wrap">
     </div>
     <hr />
